--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,6 @@ navbar:
   left:
     - text: "Informe Principal"
       href: index.html
-output: html_document:
+output:
    html_document: 
      theme: flatly
